# sysmon

./: .gitignore  CLAUDE.md  GUIDE.md  LICENSE  README.md  com.sysmon.collector.plist  pyproject.toml
skill/: SKILL.md
sysmon/: __init__.py  categories.py  cli.py  collector.py  db.py
tests/: test_categories.py  test_collector.py  test_db.py
